--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/Mystica_Facebook_400x400_150dpi-150x150.png" sizes="32x32" />
+    <link rel="icon" href="/Mystica_Facebook_400x400_150dpi-300x300.png" sizes="192x192" />
+    <link rel="apple-touch-icon" href="/Mystica_Facebook_400x400_150dpi-300x300.png" />
+    <meta name="msapplication-TileImage" content="/Mystica_Facebook_400x400_150dpi-300x300.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Seznam her | Mystica Brno</title>
   </head>
   <body>
     <div id="root"></div>
