--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" href="/Mystica_Facebook_400x400_150dpi-300x300.png" />
     <meta name="msapplication-TileImage" content="/Mystica_Facebook_400x400_150dpi-300x300.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Seznam her | Mystica Brno</title>
+    <title>Katalog her | Mystica Brno</title>
   </head>
   <body>
     <div id="root"></div>
